封装出一个按钮

--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 </head>
 <body>
 <div id="app">
-    <g-button ></g-button>
+    <g-button >我爱js</g-button>
 </div>
 <script src="./src/app.js"></script>
 </body>
-
 </html>
