--- a/index.html
+++ b/index.html
@@ -1,15 +1,27 @@
 <html lang="ch">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./static/root.css" />
-    <title>vue-ui</title>
+  <meta charset="UTF-8">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="./static/root.css"/>
+  <script src="//at.alicdn.com/t/font_1069739_7son7d2sty8.js"></script>
+  <title>vue-ui</title>
 </head>
 <body>
 <div id="app">
-    <g-button >我爱js</g-button>
+  <g-button>
+
+    按钮
+  </g-button>
+  <g-button :icon="'setting'">
+    按钮
+  </g-button>
+
+  <g-button :icon="'setting'" :icon-position="'right'">
+    按钮
+  </g-button>
+
 </div>
 <script src="./src/app.js"></script>
 </body>
