--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./static/root.css"/>
-  <script src="//at.alicdn.com/t/font_1069739_7son7d2sty8.js"></script>
+  <script src="//at.alicdn.com/t/font_1069739_o4uovvn8z4.js"></script>
   <title>vue-ui</title>
 </head>
 <body>
@@ -18,7 +18,7 @@
     按钮
   </g-button>
 
-  <g-button :icon="'setting'" :icon-position="'right'">
+  <g-button :icon="'Loading'" :icon-position="'right'">
     按钮
   </g-button>
 
