--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./static/root.css"/>
-  <script src="//at.alicdn.com/t/font_1069739_o4uovvn8z4.js"></script>
+  <script src="//at.alicdn.com/t/font_1069739_flbt5219jrf.js"></script>
   <title>vue-ui</title>
 </head>
 <body>
 <div id="app">
-  <g-button>
 
+  <g-button :loading="true">
     按钮
   </g-button>
-  <g-button :icon="'setting'">
+  <g-button :icon="'setting'" :loading="true">
     按钮
   </g-button>
 
-  <g-button :icon="'Loading'" :icon-position="'right'">
+  <g-button :icon="'setting'" :icon-position="'right'" :loading="false">
     按钮
   </g-button>
 
