--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
     按钮
   </g-button>
 
+  <g-button-group>
+    <div></div>
+    <g-button :icon="'left'" :icon-position="'left'" >上一页</g-button>
+    <g-button :loading="true">更多</g-button>
+    <g-button :icon="'right'" :icon-position="'right'" >下一页</g-button>
+  </g-button-group>
+
 </div>
 <script src="./src/app.js"></script>
 </body>
