--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     <g-button :icon="'right'" :icon-position="'right'" >下一页</g-button>
   </g-button-group>
 
+  <div id="test"></div>
+
 </div>
 <script src="./src/app.js"></script>
 </body>
