--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <body>
 <div id="app">
 
-  <g-button :loading="true">
+  <g-button :loading="loading" >
     按钮
   </g-button>
-  <g-button :icon="'setting'" :loading="true">
+  <g-button :icon="'setting'">
     按钮
   </g-button>
 
-  <g-button :icon="'setting'" :icon-position="'right'" :loading="false">
+  <g-button :icon="'setting'" :icon-position="'right'" :loading="loading">
     按钮
   </g-button>
 
